--- a/style.css
+++ b/style.css
@@ -191,14 +191,12 @@ h4 {
 }
 .footer {
   fill: #fff;
-  z-index: 1;
-  position: relative;
-  padding: 0px 20px;
+  height: 100%;
+  padding: 20px 20px 15px 20px;
   background-color: rgb(44, 44, 44);
 }
 .footer-logo {
   font-family: "shrinkhand";
-  width: 20%;
   padding: 10px 0;
   color: #fff;
   font-size: 24px;
@@ -207,11 +205,10 @@ h4 {
 .footer img {
   display: inline;
 }
-a {
+.footer a {
   color: #fff;
-  padding: 3px;
   text-decoration: none;
-  /* padding: 10px; */
+  padding: 3px;
   display: block;
 }
 .fa-utensils,
